# Phantom-Go

./: .gitignore  Cargo.toml  README.md  env.template  index.html  package.json  run_backend.sh  run_frontend.sh
.github/workflows/: deploy.yml
backend/: Cargo.toml
backend/src/: ctx.rs  error.rs  main.rs  model.rs
backend/src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
frontend/: UI.js  admin.html  admin.js  black.html  elements.js  games.html  games.js  handlers.js  index.html  main.html  package-lock.json  package.json  playwright.config.ts  script.js  style.css  utils.js  white.html
frontend/test-data/: NETWORK_PRESETS.js
frontend/tests/: board.spec.ts  helpers.ts
frontend/tests/pages/: LoginPage.ts  PlayerPage.ts  SpectatorPage.ts
go_board/: Cargo.toml
go_board/src/: board.rs  main.rs  server.rs
leptos-tutorial/: Cargo.toml  index.html
leptos-tutorial/src/: main.rs
src/: board.rs
