[package]
name = "go_board"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.8.5"
poem = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.5"
uuid = { version = "1.4", features = ["v4"] }
dotenv = "0.15"
rust-embed = { version = "8.7.2", features = ["poem"] }
hex = "0.4.3"
mime_guess = "2.0.5"
